dropshot/tests/fail/bad_endpoint2.stderr
error: Endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody,]
               [body_param: StreamingBody,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, HttpError>
  --> tests/fail/bad_endpoint2.rs:13:1
   |
13 | async fn bad_endpoint(self) -> Result<HttpResponseOk<()>, HttpError> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Expected a non-receiver argument
  --> tests/fail/bad_endpoint2.rs:13:23
   |
13 | async fn bad_endpoint(self) -> Result<HttpResponseOk<()>, HttpError> {
   |                       ^^^^
